--- a/scss/projects-page.scss
+++ b/scss/projects-page.scss
@@ -24,21 +24,21 @@
     }
 
     &.scrolling-content {
-        @include breakpoint(flexgrid-lg){
+        @include breakpoint(flexgrid-lg) {
             padding-left: 0;
         }
     }
 
     &.site-nav-container {
-        @include breakpoint(desktop){
+        @include breakpoint(desktop) {
             left: 3rem;
         }
-    
+
         @include breakpoint(flexgrid-lg) {
             left: 1rem;
         }
     }
-    
+
     &.mobile-banner {
         @include breakpoint(desktop) {
             padding: 1rem 3rem;
@@ -54,7 +54,7 @@
     margin-left: 10rem;
     padding: 0.25rem 1rem 1rem 1rem;
 
-    @include breakpoint(flexgrid-lg){
+    @include breakpoint(flexgrid-lg) {
         margin-left: 0;
         padding: 0.25rem 0 1rem 0;
     }
@@ -77,7 +77,7 @@
         top: -2rem;
         max-width: unset;
 
-        &#overview-header{
+        &#overview-header {
             top: -2rem;
         }
     }
@@ -101,7 +101,7 @@
         line-height: 1rem;
     }
 
-    @include breakpoint(flexgrid-lg){
+    @include breakpoint(flexgrid-lg) {
         margin: 0;
     }
 }
@@ -115,11 +115,11 @@
     flex-direction: column;
     transition: all linear 0.2s;
 
-    @include breakpoint(flexgrid-lg){
+    @include breakpoint(flexgrid-lg) {
         margin-left: 1rem;
     }
 
-    @include breakpoint(phablet-transition){
+    @include breakpoint(phablet-transition) {
         margin-left: 1rem;
     }
 }
@@ -135,11 +135,15 @@
     &.filled {
         background-color: $primaryCol;
 
-        &.active {            
+        &.active {
             .progress-label {
                 left: 125%;
                 opacity: 1;
                 color: $primaryCol;
+                @include breakpoint(phablet-transition) {
+                    left: 0%;
+                    opacity: 0;
+                }
             }
         }
     }
@@ -169,18 +173,19 @@
 
 .skip-to-bottom {
     background: none;
-	color: inherit;
+    color: inherit;
     border: solid transparent 2px;
     border-radius: 4px;
     padding: 0.25rem 0.5rem;
     margin: 0 auto;
     max-width: 14rem;
-	font: inherit;
-	cursor: pointer;
+    font: inherit;
+    cursor: pointer;
     outline: inherit;
     transition: all linear 0.2s;
-    
-    &:hover, &:focus {
+
+    &:hover,
+    &:focus {
         border: solid $accentCol 2px;
     }
 
